apps/kube-prometheus-stack/manifests/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - grafana.malef.lan
      secretName: kube-tls-cert
  rules:
    - host: grafana.malef.lan
      http:
        paths:
          - path: "/"
            pathType: prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  nubmber: 80
